# api-definition-observer

./: .pre-commit-hook.yaml  .pre-commit-hooks.yaml  pyproject.toml
api_definition_observer/: model_definition_observer.py
